fix: correct landing section height on mobile

--- a/frontend/src/assets/global.css
+++ b/frontend/src/assets/global.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+/* https://css-tricks.com/the-trick-to-viewport-units-on-mobile/ */
+.h-screen-mobile {
+  height: calc(var(--vh, 1vh) * 100)
+}
+
 /* rotate vinyl icon when song is playing */
 /* https://stackoverflow.com/questions/6410730/css-endless-rotation-animation */
 @-webkit-keyframes rotating /* Safari and Chrome */ {
